Stop footer text from wrapping on mobile
Add x-small breakpoint for small mobile. Lower footer meta font size on x-small from 16px to 14px.

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -6,11 +6,13 @@
 }
 
 // Breakpoints
+$xsmall-bound: 355;
 $small-bound: 580;
 $medium-bound: 840;
 $large-bound: 980;
 $xlarge-bound: 1115;
 
+$x-small-only: "only screen and (max-width: #{$xsmall-bound}px)";
 $small-only: "only screen and (max-width: #{$small-bound}px)";
 $medium-only: "only screen and (min-width: #{$small-bound + 1}px) and (max-width: #{$medium-bound}px)";
 $medium-up: "only screen and (min-width: #{$small-bound + 1}px)";
